# videobeet-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  main  videos.db
src/: main.rs
src/api/: get_api.rs  health.rs  streaming.rs  upload_video.rs  video_info.rs
src/controllers/: mod.rs
