[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.22.0", features = ["v4"] }
rusqlite = {version= "0.35.0", features = ["bundled"]}
chrono = "0.4"
rand = "0.8"
